# dflux

./: .gitignore  HANDOFF_EVAL_HARNESS.md  LICENSE  README.md  ROADMAP.md  post_r_localllama.md  post_r_machinelearning.md  pyproject.toml
docs/plans/: 2026-03-18-adaptive-governor.md  2026-03-18-per-head-explorer-design.md
examples/: adaptive_governor.py  base_vs_tuned.py  causal_primitives_gpt2.py  chat.py  compare_models.py  cp_auto_tune.py  cp_comprehensive.py  cp_mlx.py  cp_training_evolution.py  distillation_governor.py  head_ablation.py  head_attention_viewer.py  head_profile_model.py  head_surgery.py  live_governor.py  live_governor_gpt2.json  multiscale_telemetry.py  per_head_explorer.py  per_head_governor.py  random_profiles.py  reproducibility_test.py  run_benchmarks.py  three_way_comparison.py  xray_gpt2.py
paper/: information_fluid_dynamics.md
profiles/: qwen35_9b_per_head_cv_0.8.json  qwen35_9b_per_head_manual.json  qwen35_9b_reasoning_dilution_survival_0.3.json  qwen35_9b_reasoning_dilution_survival_0.5.json  qwen35_9b_reasoning_dilution_survival_0.5_INVERSE.json  qwen35_9b_reasoning_dilution_survival_0.6.json  qwen35_9b_reasoning_dilution_survival_0.8.json  qwen35_9b_reasoning_dilution_survival_1.0.json  qwen35_9b_reasoning_dilution_survival_1.2.json  qwen35_9b_reasoning_dilution_survival_2.0.json  qwen35_9b_reasoning_dilution_survival_5.0.json  qwen35_9b_reasoning_entropy_reduction_0.5.json
tests/: dflux_transformer_test.py  test_adaptive_governor.py  test_axe_ns.py  test_fine_probe.py  test_head_surgery.py  test_inference_probe.py  test_inference_probe_unit.py  test_training_probe.py
(+17 files in other folders)
